# Akinator

./: CMakeLists.txt
res/: AttribBase(Constructed).txt  AttribBase.txt  AttribTree.txt
src/: Akinator.cpp  Akinator.h  DataBase.cpp  DataBase.h  Node.h  TastyFunctions.cpp  TastyFunctions.h  Tree.cpp  Tree.h  main.cpp
